updated styling on home and abot page

--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@animxyz/core": "^0.6.6",
+    "@animxyz/react": "^0.6.7",
     "@headlessui/react": "^2.2.7",
     "@tailwindcss/vite": "^4.1.12",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
